# PertCurve

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/gears_PPC/eval/: averaged_per_perturbation_metrics.csv  averaged_per_perturbation_metrics.json  eval_per_model_metrics.csv  eval_per_model_metrics.json  eval_per_model_metrics.jsonl
results/norman_pertcurve/: perturbation_distance_stats.csv
results/norman_pertcurve/projections/: projection_AHR.csv  projection_AHR_FEV.csv  projection_AHR_KLF1.csv  projection_ARID1A.csv  projection_ARRDC3.csv  projection_ATL1.csv  projection_BAK1.csv  projection_BCL2L11.csv  projection_BCL2L11_TGFBR2.csv  projection_BCORL1.csv  projection_BPGM.csv  projection_BPGM_SAMD1.csv  projection_BPGM_ZBTB1.csv  projection_C19orf26.csv  projection_C3orf72.csv  projection_CBFA2T3.csv  projection_CBL.csv  projection_CBL_CNN1.csv  projection_CBL_PTPN12.csv  projection_CBL_PTPN9.csv  projection_CBL_UBASH3B.csv  projection_CDKN1A.csv  projection_CDKN1B.csv  (+172 more)
scripts/GEARS-PPC/: eval_PPC_gears.py  plot_PPC_gears.py  train_PPC_gears.py
scripts/PertCurve/: run_norman.sh  run_pertcurve.py
src/GEARS-PPC/: QUICK_START.md  visualize_results.py
src/mixscale-py/: .gitignore  README.md  check_harmonization_need.py  pyproject.toml  setup.py
src/mixscale-py/examples/: tutorial.md
src/mixscale-py/mixscale/: __init__.py
src/mixscale-py/mixscale/plotting/: __init__.py
src/mixscale-py/mixscale/tools/: __init__.py  decomposition.py  enrichment.py  perturbation_scoring.py
src/mixscale-py/mixscale/utils/: __init__.py  fold_change.py  glm.py
src/mixscale-py/tests/: __init__.py  test_decomposition.py  test_utils.py
src/pertcurve/: __init__.py  curve.py  downstream.py  io.py  metrics.py  plotting.py  projection.py  scoring.py
tests/: test_curve.py  test_downstream.py  test_fdr.py  test_gears_pertcurve.py  test_metrics.py
(+7 files in other folders)
